Update VS Code settings and README.md***